--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ a {
 }
 @media only screen and (max-width: 850px) {
   .first {
-    position: none;
+    display: none;
   }
   .second {
     width: 100%;
