--- a/src/style/header.css
+++ b/src/style/header.css
@@ -60,7 +60,7 @@
   cursor: pointer;
 }
 
-/* @media only screen and (max-width: 450px) {
+@media only screen and (max-width: 450px) {
   .header {
     padding: 20px 5px;
   }
@@ -68,8 +68,9 @@
     width: 170px;
     height: 32px;
     padding: 4px 8px;
+    padding-right: 0px;
   }
-} */
+}
 @media only screen and (max-width: 850px) {
   .sv {
     display: block;
