--- a/src/style/details.css
+++ b/src/style/details.css
@@ -1,10 +1,11 @@
 .aside-details {
-  position: absolute;
+  position: fixed;
   width: 400px;
   height: 100vh;
   display: flex;
   flex-direction: column;
   top: 0;
+  right: 0;
 }
 .aside-header {
   display: flex;
