--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -9,10 +9,10 @@
 }
 .nav-option {
   display: flex;
-  padding: 8px 12px;
+  padding: 20px 12px;
   justify-content: center;
   align-items: center;
-  gap: 4px;
+  gap: 5px;
   width: 100%;
   height: 36px;
 }
@@ -64,4 +64,8 @@
     width: 80%;
     height: 100%;
   }
+}
+.acti {
+  background: rgba(249, 250, 253, 0.2);
+  border-radius: 6px;
 }
