--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   width: 100%;
-  height: 576px;
+  height: 100vh;
   padding: 19px 14px 10px 16px;
   flex-direction: column;
   align-items: flex-start;
